fix guidance tooltip not showing

--- a/src/pages/DataAccessRequest/DataAccessRequest.scss
+++ b/src/pages/DataAccessRequest/DataAccessRequest.scss
@@ -78,14 +78,6 @@
 	padding: 0 5px;
 }
 
-.toolTipHidden {
-	position: relative;
-	display: inline-block;
-	padding: 0 5px;
-	visibility: hidden;
-	opacity: 0;
-}
-
 .toolTip .toolTipText {
 	visibility: hidden;
 	position: absolute;
